--- a/polybar/grayblocks/config.ini
+++ b/polybar/grayblocks/config.ini
@@ -139,7 +139,7 @@ font-1 = "feather:size=15;3"
 ;   modules-right = ipc clock
 
 modules-left = launcher workspaces sep cpu sep memory
-modules-center = updates sep battery sep backlight sep temperature
+modules-center = updates sep battery sep backlight sep temperature sep nightlight
 modules-right = color-switch sep network sep date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
