--- a/polybar/grayblocks/modules.ini
+++ b/polybar/grayblocks/modules.ini
@@ -798,60 +798,13 @@ label-connected = %essid%/%local_ip%
 ;format-disconnected-background = ${colors.background}
 ;format-disconnected-foreground = ${colors.foreground}
 format-disconnected-padding = 1
-format-disconnected = %{A1:$HOME/.../.config/polybar/grayblocks/scripts/rofi-network-manager.sh:}<label-disconnected>%{A}
+format-disconnected = %{A1:/home/miro/.config/polybar/grayblocks/scripts/rofi-network-manager.sh:}<label-disconnected>%{A}
 label-disconnected =""
 ramp-signal-0 = "󰤯"
 ramp-signal-1 = "󰤟"
 ramp-signal-2 = "󰤢"
 ramp-signal-3 = "󰤥"
 ramp-signal-4 = "󰤨"
-;ramp-signal-foreground = ${colors.white}
-
-
-
-
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; [module/wired-network]						       ;
-; type = internal/network						       ;
-; interface = eth0							       ;
-; 									       ;
-; [module/wireless-network]						       ;
-; type = internal/network						       ;
-; interface = wlo1							       ;
-; 									       ;
-; [module/network]							       ;
-; type = internal/network						       ;
-; interface = wlo1							       ;
-; 									       ;
-; interval = 1.0							       ;
-; accumulate-stats = true						       ;
-; unknown-as-up = true							       ;
-; 									       ;
-; format-connected = <label-connected>					       ;
-; format-connected-prefix = 						       ;
-; format-connected-background = ${color.background-alt}			       ;
-; format-connected-foreground = ${color.foreground}			       ;
-; format-connected-overline = ${color.background}			       ;
-; format-connected-underline = ${color.background}			       ;
-; format-connected-padding = 2						       ;
-; format-disconnected = <label-disconnected>				       ;
-; format-disconnected-prefix = 					       ;
-; format-disconnected-background = ${color.background-alt}		       ;
-; format-disconnected-foreground = ${color.foreground}			       ;
-; format-disconnected-overline = ${color.background}			       ;
-; format-disconnected-underline = ${color.background}			       ;
-; format-disconnected-padding = 2					       ;
-; 									       ;
-; label-connected = "%{A1:networkmanager_dmenu &:} %essid%%{A} %local_ip%%{A}" ;
-; label-disconnected = "%{A1:networkmanager_dmenu &:} Offline%{A}"	       ;
-; ramp-signal-0 = 							       ;
-; ramp-signal-1 = 							       ;
-; ramp-signal-2 = 							       ;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/pulseaudio]
 type = internal/pulseaudio
 
@@ -1012,26 +965,6 @@ label-indicator-on-foreground = ${color.primary}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/title]
-type = internal/xwindow
-
-; Available tags:
-;   <label> (default)
-format = <label>
-format-padding = 2
-format-foreground = ${color.foreground-alt}
-
-; Available tokens:
-;   %title%
-; Default: %title%
-label = " %title%"
-label-maxlen = 30
-
-; Used instead of label when there is no window title
-label-empty = Desktop
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/workspaces]
 type = internal/xworkspaces
 
@@ -1116,3 +1049,18 @@ label-occupied-padding = 1
 label-empty-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/nightlight]
+type = custom/ipc
+
+format-prefix = "nl "
+format-font = 1
+
+initial = 1
+
+hook-0 = bash ~/.config/polybar/grayblocks/scripts/nightlight.sh -
+hook-1 = bash ~/.config/polybar/grayblocks/scripts/nightlight.sh +
+
+scroll-up = "#nightlight.hook.0"
+scroll-down = "#nightlight.hook.1"
+#also available: click-left/middle/right, double-click-left/right
