--- a/polybar/grayblocks/colors.ini
+++ b/polybar/grayblocks/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #272727
-background-alt = #383838
-foreground = #CACACA
-foreground-alt = #CACACA
-primary = #3949ab
-red = #EF5350
-yellow = #FFEE58
+background = #FFFFFF
+background-alt = #E7E7E7
+foreground = #0a0a0a
+foreground-alt = #0a0a0a
+primary = #d81b60
+red = #B71C1C
+yellow = #F57F17
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
